# dj1000-converter-lib

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: development.md  dll-verification.md  modern-raw-roadmap.md  native-rewrite-plan.md  repo-architecture.md  reverse-engineering.md  wasm.md
examples/wasm-browser/: README.md  app.mjs  index.html  worker.mjs
native/: CMakeLists.txt  reference_manifest.json
native/cmake/: dj1000Config.cmake.in
native/include/dj1000/: bmp.hpp  bright_vertical_gate.hpp  c_api.h  converter.hpp  dat_file.hpp  geometry_copy.hpp  index_view.hpp  large_export_pipeline.hpp  large_vertical_resample.hpp  modern_dng.hpp  modern_raw_frame.hpp  modern_sensor_frame.hpp  nonlarge_geometry.hpp  nonlarge_post_geometry_pipeline.hpp  nonlarge_row_resample.hpp  nonlarge_source_pipeline.hpp  normal_export_pipeline.hpp  post_geometry_center_scale.hpp  post_geometry_dual_scale.hpp  post_geometry_edge_response.hpp  post_geometry_filter.hpp  post_geometry_prepare.hpp  post_geometry_rgb_convert.hpp  post_geometry_stage_2a00.hpp  post_geometry_stage_2dd0.hpp  post_geometry_stage_3060.hpp  post_geometry_stage_3600.hpp  post_geometry_stage_3890.hpp  post_geometry_stage_4810.hpp  post_rgb_stage_3b00.hpp  post_rgb_stage_40f0.hpp  post_rgb_stage_42a0.hpp  pregeometry_normalize.hpp  pregeometry_pipeline.hpp  quantize_stage.hpp  resample_lut.hpp  source_center_stage.hpp  source_seed_stage.hpp  source_stage.hpp
native/src/: adobe_dng_sdk_jxl_stub.cpp  bmp.cpp  bright_vertical_gate.cpp  c_api.cpp  converter.cpp  converter_io.cpp  dat_file.cpp  dat_file_io.cpp  export_pipeline_cache.hpp  geometry_copy.cpp  index_view.cpp  large_export_pipeline.cpp  large_vertical_resample.cpp  main.cpp  modern_dng.cpp  modern_dng_sdk.cpp  modern_export_pipeline.cpp  modern_export_pipeline.hpp  modern_raw_frame.cpp  modern_sensor_frame.cpp  nonlarge_geometry.cpp  nonlarge_post_geometry_pipeline.cpp  nonlarge_row_resample.cpp  nonlarge_source_pipeline.cpp  normal_export_pipeline.cpp  post_geometry_center_scale.cpp  post_geometry_dual_scale.cpp  post_geometry_edge_response.cpp  post_geometry_filter.cpp  post_geometry_prepare.cpp  post_geometry_rgb_convert.cpp  post_geometry_stage_2a00.cpp  post_geometry_stage_2dd0.cpp  post_geometry_stage_3060.cpp  post_geometry_stage_3600.cpp  post_geometry_stage_3890.cpp  post_geometry_stage_4810.cpp  post_rgb_stage_3b00.cpp  post_rgb_stage_40f0.cpp  post_rgb_stage_42a0.cpp  (+8 more)
native/tests/: test_bright_vertical_gate.cpp  test_c_api.cpp  test_converter.cpp  test_geometry_copy.cpp  test_index_view.cpp  test_large_vertical_resample.cpp  test_modern_dng.cpp  test_modern_dng_sdk.cpp  test_modern_pipeline.cpp  test_modern_raw_frame.cpp  test_modern_sensor_frame.cpp  test_nonlarge_geometry.cpp  test_nonlarge_row_resample.cpp  test_nonlarge_source_pipeline.cpp  test_post_geometry_center_scale.cpp  test_post_geometry_dual_scale.cpp  test_post_geometry_edge_response.cpp  test_post_geometry_filter.cpp  test_post_geometry_prepare.cpp  test_post_geometry_rgb_convert.cpp  test_post_geometry_stage_2a00.cpp  test_post_geometry_stage_2dd0.cpp  test_post_geometry_stage_3060.cpp  test_post_geometry_stage_3600.cpp  test_post_geometry_stage_3890.cpp  test_post_geometry_stage_4810.cpp  test_post_rgb_stage_3b00.cpp  test_post_rgb_stage_40f0.cpp  test_post_rgb_stage_42a0.cpp  test_pregeometry_normalize.cpp  test_pregeometry_pipeline.cpp  test_quantize_stage.cpp  test_resample_lut.cpp  test_session.cpp  test_source_center_stage.cpp  test_source_seed_stage.cpp  test_source_stage.cpp
native/wasm/: dj1000_wasm_api.mjs
tools/: Dj1000DllHarness.cs  blast.c  blast.h  dj1000_convert_original.py  dj1000_dat_info.py  dj1000_index_view.py  dj1000_pair_report.py  dj1000_search_settings.py  dj1000_verify_original.py  generate_native_fixture_manifest.py  isv3_extract.cpp  path_helpers.py  probe_geometry_stage.py  probe_post_geometry_stages.py  probe_source_stage.py  sweep_geometry_impulses.py  sweep_source_stage_hsteps.py  trace_default_large_export_sample.py  trace_default_normal_export_sample.py  verify_native_bright_vertical_gate.py  verify_native_large_vertical.py  verify_native_nonlarge_geometry.py  verify_native_nonlarge_post_geometry_pipeline.py  verify_native_nonlarge_row_resample.py  verify_native_nonlarge_source_pipeline.py  verify_native_post_geometry_center_scale.py  verify_native_post_geometry_dual_scale.py  verify_native_post_geometry_edge_response.py  verify_native_post_geometry_filter.py  verify_native_post_geometry_prepare.py  verify_native_post_geometry_rgb_convert.py  verify_native_post_geometry_stage_2a00.py  verify_native_post_geometry_stage_2dd0.py  verify_native_post_geometry_stage_3060.py  verify_native_post_geometry_stage_3600.py  verify_native_post_geometry_stage_3890.py  verify_native_post_geometry_stage_4810.py  verify_native_post_rgb_stage_3b00.py  verify_native_pregeometry_normalize.py  verify_native_pregeometry_pipeline.py  (+5 more)
